src/objects/Wine__c.object
<CustomObject>
    <fields>
        <fullName>Alcohol__c</fullName>
        <label>Alcohol</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GrapeVarieties__c</fullName>
        <label>Grape Varieties</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RegionAppellation__c</fullName>
        <label>Region/Appellation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vintage__c</fullName>
        <label>Vintage (Year)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Winery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Winery</label>
        <referenceTo>Winery__c</referenceTo>
        <relationshipLabel>Wine</relationshipLabel>
        <relationshipName>Wine</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wine</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wine</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>